fix(component): align text and circle avatar

--- a/src/presentation/components/Avatar/index.module.css
+++ b/src/presentation/components/Avatar/index.module.css
@@ -1,3 +1,4 @@
 .main {
     width: auto;
+    border-radius: 50%;
 }
