--- a/src/presentation/styles/panel.module.css
+++ b/src/presentation/styles/panel.module.css
@@ -30,4 +30,5 @@
     display: flex;
     flex-direction: row;
     margin-bottom: 4%;
+    align-items: center;
 }
